--- a/main.css
+++ b/main.css
@@ -3,4 +3,4 @@
 html { height: 100%; }
 body { height: 100%; margin: 0; }
 .canvas-container { position:fixed; top:0; left:0; width:100%; height:100%; }
-#the-canvas { position:absolute; top:0; left:0; width:100%; height:100%; background:#222; }
+#the-canvas { position:absolute; top:0; left:0; width:100%; height:100%; background:url('bg.jpg') no-repeat center / cover; }
